# dbfix

./: CMakeLists.txt  readme.md  versions.txt
dbfix/: CMakeLists.txt  dbfix-cli.c  dbfix.c  hyscan-fix-assistant.c  hyscan-fix-assistant.h  hyscan-fix-common.c  hyscan-fix-common.h  hyscan-fix-db.c  hyscan-fix-db.h  hyscan-fix-project.c  hyscan-fix-project.h  hyscan-fix-track.c  hyscan-fix-track.h  translate.sh
dbfix/misc/locale/ru/LC_MESSAGES/: dbfix.mo
dbfix/po/: dbfix.pot
dbfix/po/ru/: dbfix.po
schemas/: get-schemas  hyscan-fix-resources.xml
